# mcg_visual

./: .gitignore  Cargo.toml  index.html  serve.sh  wasm-build.sh
src/: example.rs  game.rs  lib.rs  utils.rs
src/game/: card.rs  field.rs  screen.rs  vfx.rs
src/game/card/: example.rs
tests/: web.rs
