[package]
name = "mcg_visual"
version = "0.1.0"
authors = ["Jan Cichosz <jan.cichosz@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement"] }
egui = "0.31.1"
eframe = "0.31.1"
wasm-bindgen-futures = "0.4.50"
rand = { version = "<0.9.0", features = ["small_rng"] }
# rand = { version = "0.9.1", features = ["small_rng"] }
getrandom = { version = "0.2.15", features = ["js"] }
# getrandom = { version = "0.3.2", features = ["wasm_js"] }
# image = { version = "0.25", features = ["jpeg", "png"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
